set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/)

add_subdirectory(bench)
add_subdirectory(compat)
add_subdirectory(consensus)
add_subdirectory(crypto)
add_subdirectory(leveldb)
add_subdirectory(policy)
add_subdirectory(primitives)
add_subdirectory(qt)
add_subdirectory(script)
add_subdirectory(secp256k1)
add_subdirectory(support)
add_subdirectory(test)
add_subdirectory(univalue)
add_subdirectory(wallet)
add_subdirectory(zmq)

